syntax = "proto3";

option java_multiple_files = false;
option java_package = "com.cpdss.common.generated.loadableStudy";

// import common definitions like ResponseStatus
import "common.proto";

 message DischargeStudyRequest{
	int64 dischargeStudyId = 1;
}
